Fix alignment up top in mobile

--- a/wp-content/themes/rebuild-foundation/src/sass/mobile.scss
+++ b/wp-content/themes/rebuild-foundation/src/sass/mobile.scss
@@ -149,6 +149,7 @@ ul.event-year-filter {
 }
 
 .filters, .blog ul.site-filter {
+	margin-top: 5px;
 
 	.site-filter, .event-filter {
 		@include clear-inblock();
@@ -207,11 +208,16 @@ ul.event-year-filter {
 .single-site {
 
 	article.site {
-		margin-top: 25px;
+		margin-top: 0;
 
 		header.site-header {
 			@include clear-inblock();
 			width: $size__mobile-main-nested;
+
+
+			.entry-meta {
+				margin-top: 25px;
+			}
 		}
 
 		#site-gallery, .single-image {
@@ -232,6 +238,16 @@ ul.event-year-filter {
 
 			figcaption {
 
+			}
+		}
+
+		.single-image {
+			margin-bottom: 50px;
+
+			figure {
+				margin-top: 75px;
+				width: 100%;
+				height: 300px;
 			}
 		}
 
@@ -318,7 +334,7 @@ ul.event-year-filter {
 // Events Listing
 
 .post-type-archive-event {
-	padding-top: 10px;
+	padding-top: 0;
 
 	.posts-list {
 		width: 100%;
@@ -459,10 +475,11 @@ article.exhibition {
 	#main {
 		width: $size__mobile-main-nested;
 		left: 0;
+		margin-top: 15px;
 	}
 
 	article {
-		margin-top: 30px;
+		margin-top: 0;
 
 		#details {
 			.hours {
@@ -634,6 +651,14 @@ img.alignright, figure.alignright{
 		article {
 			width: $size__mobile-main-nested;
 			padding: 0;
+
+			.entry-header {
+				padding-top: 0;
+
+				.entry-meta {
+					padding-top: 0;
+				}
+			}
 		}
 	}
 
