--- a/wp-content/themes/rebuild-foundation/src/sass/templates/_events.scss
+++ b/wp-content/themes/rebuild-foundation/src/sass/templates/_events.scss
@@ -172,7 +172,6 @@
 		#main {
 			left: 0;
 			width: 100%;
-			margin-top: 10px;
 		}
 	}
 }
